--- a/css/styles.css
+++ b/css/styles.css
@@ -7,18 +7,27 @@
 	
 }
 
-.blue-slide {
-	background: #4390EE;
+.s1{
+	width: 100%;
+	height: 100%;
+	background: url(../images/t1-bg.png) center 0 no-repeat;
+	background-size: cover;
 }
-.red-slide {
-	background: #CA4040;
+
+.s1 .a1{
+	background: url(../images/t1-yuan.png) center 0 no-repeat;
+	width: 100%;
+	height: 80%;
+	margin: 0 auto;
+	position: absolute;
+	top:20%;
 }
-.orange-slide {
-	background: #FF8604;
-}
-.swiper-slide {
-	line-height: 100%;
-	color: #fff;
-	font-size: 48px;
-	text-align: center;
+
+.s1 .a2{
+	background: url(../images/t1-text.png) center 0 no-repeat;
+	width: 100%;
+	height: 80%;
+	margin: 0 auto;
+	position: absolute;
+	top:25%;
 }
