--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,31 @@
 	position: absolute;
 	top:25%;
 }
+
+.s2{
+	width: 100%;
+	height: 100%;
+	background: url(../images/t2-bg.png) center 0 no-repeat;
+	background-size: cover;
+	text-align: center;
+	
+}
+
+.s2 .a1{
+	background:#0f0 url(../images/t2-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 50%;
+	margin: 10% auto;
+	/*position: absolute;
+	top:10%;*/
+}
+
+.s2 .a2{
+	background:#f00 url(../images/t2-3.png) center 0 no-repeat;
+	width: 100%;
+	height: 40%;
+	margin: 0 auto;
+	position: absolute;
+	bottom:0;
+}
