--- a/css/styles.css
+++ b/css/styles.css
@@ -16,20 +16,27 @@
 
 .s1 .a1{
 	background: url(../images/t1-yuan.png) center 0 no-repeat;
-	width: 100%;
+	background-size: contain;
+	width: 80%;
 	height: 80%;
-	margin: 0 auto;
 	position: absolute;
-	top:20%;
+	top:50%;
+	margin-top: -50%;
+	left: 50%;
+	margin-left: -40%;
 }
 
 .s1 .a2{
 	background: url(../images/t1-text.png) center 0 no-repeat;
-	width: 100%;
-	height: 80%;
-	margin: 0 auto;
+	background-size: contain;
+	width: 90%;
+	height: 60%;
 	position: absolute;
-	top:25%;
+	top:50%;
+	margin-top: -40%;/**/
+	left: 50%;
+	margin-left: -45%;/**/
+
 }
 
 .s2{
@@ -42,20 +49,21 @@
 }
 
 .s2 .a1{
-	background:#0f0 url(../images/t2-2.png) center 0 no-repeat;
+	background: url(../images/t2-2.png) center 0 no-repeat;
 	background-size: contain;
-	width: 60%;
+	width: 80%;
 	height: 50%;
-	margin: 10% auto;
-	/*position: absolute;
-	top:10%;*/
+	position: absolute;
+	top: 5%;
+	left: 50%;
+	margin-left: -40%;
 }
 
 .s2 .a2{
-	background:#f00 url(../images/t2-3.png) center 0 no-repeat;
+	background: url(../images/t2-3.png) center 0 no-repeat;
+	background-size: contain;
 	width: 100%;
 	height: 40%;
-	margin: 0 auto;
 	position: absolute;
-	bottom:0;
+	bottom:5%;
 }
