--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 	position: absolute;
 	
 }
-
+/* 第1屏 */
 .s1{
 	width: 100%;
 	height: 100%;
@@ -39,6 +39,7 @@
 
 }
 
+/* 第2屏 */
 .s2{
 	width: 100%;
 	height: 100%;
@@ -62,8 +63,310 @@
 .s2 .a2{
 	background: url(../images/t2-3.png) center 0 no-repeat;
 	background-size: contain;
+	width: 60%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -30%;
+	bottom:5%;
+}
+
+/* 第3屏 */
+.s3{
 	width: 100%;
+	height: 100%;
+	background: url(../images/t3-bg.png) center 0 no-repeat;
+	background-size: cover;
+	text-align: center;
+	
+}
+
+.s3 .a1{
+	background: url(../images/t3-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 50%;
+	position: absolute;
+	top: 5%;
+	left: 50%;
+	margin-left: -40%;
+}
+
+.s3 .a2{
+	background: url(../images/t3-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -30%;
+	bottom: 10%;
+}
+
+/* 第4屏 */
+.s4{
+	background: #F94848	
+}
+
+.s4 .a1{
+	background: url(../images/t4-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 50%;
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	margin-left: -40%;
+}
+
+.s4 .a2{
+	background: url(../images/t4-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 50%;
+	position: absolute;
+	left: 50%;
+	margin-left: -40%;
+	top: 40%;
+
+}
+.s4 .a3{
+	background: url(../images/t4-3.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -40%;
+	bottom:5%;
+}
+
+/* 第5屏 */
+.s5{
+	background: #EC5F55;	
+}
+
+.s5 .a1{
+	background: url(../images/t5-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 50%;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: -30%;
+}
+
+.s5 .a2{
+	background: url(../images/t5-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
 	height: 40%;
 	position: absolute;
+	left: 50%;
+	margin-left: -25%;
+	top: 15%;
+
+}
+.s5 .a3{
+	background: url(../images/t5-3.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -40%;
 	bottom:5%;
+}
+
+/* 第6屏 */
+.s6{
+	background: #7876B7;	
+}
+
+.s6 .a1{
+	background: url(../images/t6-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 50%;
+	position: absolute;
+	top: 5%;
+	left: 50%;
+	margin-left: -30%;
+}
+
+.s6 .a2{
+	background: url(../images/t6-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 40%;
+	position: absolute;
+	left: 50%;
+	margin-left: -25%;
+	top: 10%;
+
+}
+.s6 .a3{
+	background: url(../images/t6-3.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -30%;
+	bottom: 5%;
+}
+
+/* 第7屏 */
+.s7{
+	background: #147C79;	
+}
+
+.s7 .a1{
+	background: url(../images/t7-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 50%;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: -40%;
+}
+
+.s7 .a2{
+	background: url(../images/t7-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 40%;
+	position: absolute;
+	left: 50%;
+	margin-left: -30%;
+	top: 20%;
+
+}
+.s7 .a3{
+	background: url(../images/t7-3.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -30%;
+	bottom: 5%;
+}
+
+/* 第8屏 */
+.s8{
+	background: #619B51;	
+}
+
+.s8 .a1{
+	background: url(../images/t8-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 50%;
+	position: absolute;
+	top: 5%;
+	left: 50%;
+	margin-left: -30%;
+}
+
+.s8 .a2{
+	background: url(../images/t8-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 40%;
+	position: absolute;
+	left: 50%;
+	margin-left: -40%;
+	top: 8%;
+
+}
+.s8 .a3{
+	background: url(../images/t8-3.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -30%;
+	bottom: 5%;
+}
+
+/* 第9屏 */
+.s9{
+	background: #5FBDD9;
+}
+
+.s9 .a1{
+	background: url(../images/t9-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 100%;
+	height: 80%;
+	position: absolute;
+	left: 50%;
+	margin-left: -50%;
+}
+
+.s9 .a2{
+	background: url(../images/t9-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 100%;
+	height: 25%;
+	position: absolute;
+	bottom:0;
+}
+
+/* 第10屏 */
+.s10{
+	width: 100%;
+	height: 100%;
+	background: url(../images/t10-bg.png) center 0 no-repeat;
+	background-size: cover;
+	text-align: center;
+	
+}
+
+.s10 .a1{
+	background: url(../images/t10-1.png) center 0 no-repeat;
+	background-size: contain;
+	width: 90%;
+	height: 50%;
+	position: absolute;
+	top: 5%;
+	left: 50%;
+	margin-left: -45%;
+}
+
+.s10 .a2{
+	background: url(../images/t10-2.png) center 0 no-repeat;
+	background-size: contain;
+	width: 40%;
+	height: 20%;
+	position: absolute;
+	left: 50%;
+	margin-left: -20%;
+	top: 62%;
+}
+
+.s10 .a3{
+	background: url(../images/t10-3.png) center 0 no-repeat;
+	background-size: contain;
+	width: 60%;
+	height: 50%;
+	position: absolute;
+	top: 70%;
+	left: 50%;
+	margin-left: -30%;
+}
+
+.s10 .a4{
+	background: url(../images/t10-4.png) center 0 no-repeat;
+	background-size: contain;
+	width: 40%;
+	height: 30%;
+	position: absolute;
+	left: 50%;
+	margin-left: -20%;
+	top: 80%;
 }
