--- a/css/styles.css
+++ b/css/styles.css
@@ -370,3 +370,29 @@
 	margin-left: -20%;
 	top: 80%;
 }
+
+/* arrow */
+.arrow{
+	background: url(../images/icon_up.png) center 0 no-repeat;
+	background-size: contain;
+	width: 80%;
+	height: 20px;
+	position: absolute;
+	left: 50%;
+	margin-left: -40%;
+	bottom: 5%;
+	z-index: 3;
+	-webkit-animation: up-down 1s linear infinite;
+	animation: up-down 1s linear infinite;
+}
+
+@-webkit-keyframes up-down {
+	0% { -webkit-transform: translateY(100%); opacity:0;}
+	50% { -webkit-transform: translateY(0%); opacity:1;}
+	100% { -webkit-transform: translateY(-100%); opacity:0;}
+}
+@keyframes up-down {
+	0% { -webkit-transform: translateY(100%); transform: translateY(100%); opacity:0;}
+	50% { -webkit-transform: translateY(0%); transform: translateY(0%); opacity:1;}
+	100% { -webkit-transform: translateY(-100%); transform: translateY(-100%); opacity:0;}
+}
